Changes in version 1.4.1

o FIX: unequal nodes and edges in `test.bootSemNeT` (GitHub Issue #3)

o UPDATE: tooltips added to network estimation methods in Shiny

o UPDATE: associated Shiny packages messages suppressed on Shiny startup

o UPDATE: message for Shiny results output

o UPDATE: `test.bootSemNeT` no longer uses number of nodes in ANCOVA


Changes in version 1.4.0

o UPDATE: output names for `randwalk`

o UPDATE: Shiny interface is condensed and more step-by-step progressive

o UPDATE: Shiny includes random walk analysis

o UPDATE: Shiny includes spreading activation analysis (thanks to Cythina Siew)

o ADD: animation plot for spreading activation analysis in Shiny

o FIX: `randwalk` bug with 'steps' and 'reps' argument

o FIX: Shiny 'Clear Results' for new analyses

o UPDATE: progress bar for some Shiny analyses

o FIX: output for animation plots in Shiny

o UPDATE: S3method for animation plots

o UPDATE: citations added to Shiny analyses

o ADD: permutation test to SemNeT (`permSemNeT) and Shiny

o UPDATE: ANOVAs controlling for the number of nodes and edges is now the statistical test in `test.bootSemNeT`

o ADD: functions to convert data into other softwares format: SNAFU (`convert2snafu`) and igraph (`convert2igraph`)


Changes in version 1.3.0

o FIX: output of two-way ANOVA in `test.bootSemNeT`

o FIX: 'groups' argument in `test.bootSemNeT`

o UPDATE: added integration of SemNetCleaner output into `SemNeTShiny`

o MOVE: `equate` and `finalize` moved from SemNetCleaner to SemNeT

o REMOVE: foreach and doParallel dependencies were removed (all parallelization is through the pbapply package)

o REMOVE: SemNetCleaner dependency was removed to allow SemNeT to operate independently -- all necessary functions from SemNetCleaner have been moved to internal functions

o UPDATE: `compare.nets` has changed to `compare_nets`

o ADD: Several semantic network estimation methods (see `CN`, `NRW`, and `PF`) -- these are included in the Shiny app
