@@ -10,6 +10,12 @@ o UPDATE: message for Shiny results output
 
 o UPDATE: `test.bootSemNeT` no longer uses number of nodes in ANCOVA
 
+o UPDATE: added minimum number (`type = "num"`) and proportion (`type = "prop"`) of co-occurrences argument to `NRW`
+
+o UPDATE: Shiny with new `NRW` arguments
+
+o UPDATE: Shiny now provides effect sizes for partial eta squared in Bootstrap Network Analyses tab
+
 
 Changes in version 1.4.0
 
